# ma-central

./: .gitignore  README
Server/: .example.env  Cargo.toml  data_auth.db  data_main.db  service.sh  setup.sh  update.sh
Server/src/: auth.rs  db_auth.rs  db_main.rs  main.rs  pass.rs
iOS/ma-central/: AppState.swift  CardView.swift  ChatbotView.swift  CheckLoginState.swift  EventDetailView.swift  EventView.swift  EventsView.swift  HomeView.swift  HomeViewMeCarousel.swift  HomeViewUpcomingCarousel.swift  Info.plist  LeaderboardView.swift  Localizable.xcstrings  LoginView.swift  ManageOptions.swift  ResourcesView.swift  SettingsManager.swift  SettingsView.swift  URLSessionConfiguration.swift  ma-central.entitlements  ma_centralApp.swift
iOS/ma-central-admin/ma-central-admin/: AppState.swift  EventsView.swift  Info.plist  LoginView.swift  NewEvent.swift  ScanView.swift  ScannerViewController.swift  URLSessionConfiguration.swift  ma-central-admin.entitlements  ma_central_adminApp.swift
iOS/ma-central-admin/ma-central-admin.xcodeproj/: project.pbxproj
iOS/ma-central.xcodeproj/: project.pbxproj
iOS/ma-central.xcodeproj/xcshareddata/xcschemes/: ma-central.xcscheme
iOS/ma-central.xcworkspace/: contents.xcworkspacedata
iOS/ma-central/Admin/: EventsView.swift  NewEvent.swift
iOS/ma-central/Home View Components/: HomeViewMeCarousel.swift  HomeViewUpcomingCarousel.swift
iOS/ma-central/Miscellaneous View Components/: AddToWalletButton.swift  CardView.swift  GuestAccessRestricted.swift  LoadingDataView.swift
(+7 files in other folders)
