[package]
name = "macsvc"
version = "1.0.0"
authors = ["Jayen Agrawal"]
edition = "2021"
homepage = "https://jayagra.com/"
repository = "https://github.com/JayAgra/ma-central"
license = "MIT"

[dependencies]
actix = "0.13.1"
actix-governor = "0.5.0"
actix-http = "3.4"
actix-identity = "0.4.0"
actix-session = { version = "~0.7", features = ["cookie-session"] }
actix-web = { version = "4.4", features = ["openssl"] }
anyhow = { version = "~1.0" }
argon2 = "0.5.2"
async-trait = { version = "~0.1" }
chrono = { version = "~0.4" }
dotenv = "0.15.0"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
once_cell = { version = "~1.17" }
openssl = { version = "0.10.64", features = ["v110"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_cbor_2 = { version = "0.12.0-dev" }
sysinfo = "0.16.4"

[dependencies.rusqlite]
version = "0.29"
features = ["bundled"]